--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.1",
+    "@next/mdx": "^16.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-mdx-remote": "^5.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "rehype-highlight": "^7.0.2",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
