--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "rehype-highlight": "^7.0.2",
+    "shiki": "^3.20.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
